# ChronoTick

./: .gitignore  8HR_DEGRADATION_ROOT_CAUSE_ANALYSIS.md  BATCH_FORECASTING_CHANGES.md  BATCH_FORECASTING_IMPLEMENTATION.md  CLAUDE.md  DEGRADATION_FIX_IMPLEMENTATION.md  DEPLOYMENT_STATUS_V3.md  EXPERIMENT_14_IMPLEMENTATION_PLAN.md  EXPERIMENT_GUIDE.md  FAILURE_ANALYSIS_20251016.md  IMPLEMENTATION_STATUS.md  IMPLEMENT_IMPROVEMENTS.md  MONITOR_8HR_TEST.md  PAPER_DESIGN_SECTION_ANALYSIS.md  POST_TEST_ANALYSIS_PROCEDURE.md  README.md  TEST_STATUS.md  V3_DEPLOYMENT_FINAL_STATUS.md  apply_batch_forecasting.py  design.md  ntp_proxy.py  ntp_proxy_config.yaml  pyproject.toml  test_calibration.py
data-streaming-evaluations/: ANALYSIS.md  ANALYSIS_FINDINGS.md  BASELINE_RESULTS.md  CHRONOTICK_BUG_ANALYSIS.md  DEPLOYMENT.md  DEPLOYMENT_STATUS.md  FINDINGS.md  HONEST_STATUS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  NARRATIVE.md  QUICKSTART.md  README.md  SOLUTION_SUMMARY.md  analysis_chronotick_vs_system.py  analyze_system_clock_baseline.py  deploy.sh  deploy_chronotick_2min.sh  deploy_chronotick_30min.sh  deploy_comprehensive.sh  deploy_ntp_fair_test.sh  deploy_proper_30min.sh  deploy_pssh_30min.sh  deploy_slurm_30min.sh  deploy_smart.sh  deploy_system_clock_2hour.sh  deploy_system_clock_30min.sh  deploy_system_clock_CLEAN.sh  deploy_system_clock_baseline.sh  diagnose_chronotick_offset.py  pyproject.toml  quick_analysis.py  test_fix1_fix2.py
data-streaming-evaluations/analysis/: __init__.py  generate_all_figures.py
data-streaming-evaluations/analysis_results/: chronotick_worker_b_detailed.csv  chronotick_worker_c_detailed.csv  summary_report.txt  system_clock_worker_b_detailed.csv  system_clock_worker_c_detailed.csv
data-streaming-evaluations/configs/: chronotick_config.yaml
data-streaming-evaluations/src/: __init__.py  common.py  coordinator.py  worker.py  worker_chronotick.py
inferance_layer/: INTERFACE_DEMO_SUMMARY.md  TESTING_STRATEGY_SUMMARY.md  pyproject.toml
inferance_layer/chronotick_inference/: __init__.py  config.yaml
inferance_layer/examples/: basic_usage.py
inferance_layer/tests/: test_utils.py
old/chronotick-server/: .coverage  pyproject.toml
old/chronotick-server/tests/: test_server.py  test_sources.py
old/chronotick_shm_prototype/chronotick_shm/: MCP_IMPLEMENTATION_COMPLETE.md  REFERENCE.md  REORGANIZATION_COMPLETE.md  pyproject.toml
tsfm/: .gitignore  AUTOREGRESSIVE_ARCHITECTURE.md  CHRONOTICK_INTEGRATION_COMPLETE.md  COVARIATES_STATUS.md  ENVIRONMENT_MAPPING.md  EXPERIMENTAL_PLAN.md  GIL_CONTENTION_FIX.md  IMPLEMENTATION_ANALYSIS.md  INTEGRATION_COMPLETE.md  LLMs.MD  PHASE2_TESTING_PLAN.md  PROGRESS_LOG.md  README.md  SESSION_SUMMARY.md  TIMESFM_COVARIATES_IMPLEMENTATION.md  chronotick_mcp.py  eval.md  pyproject.toml  test_batch_forecasting.py  test_debug_logging.py  test_real_system.py  test_timesfm_covariates.py
tsfm/chronotick/: __init__.py
tsfm/chronotick_inference/: CONFIGURATION_GUIDE.md  config_complete.yaml  config_selector.py  daemon.py  engine.py  mcp_server.py  ntp_client.py  predictive_scheduler.py  real_data_pipeline.py  tsfm_model_wrapper.py  utils.py
tsfm/chronotick_inference/configs/: hybrid_chronos_ttm.yaml  hybrid_timesfm_chronos.yaml  multi_device_full.yaml
tsfm/docs/: CHRONOTICK_API_SUCCESS.md  COMPREHENSIVE_USAGE_GUIDE.md  DEBUG_LOGGING_GUIDE.md  HIGH_FREQUENCY_FORECASTING_GUIDE.md  INTEGRATION_SUCCESS_SUMMARY.md  MCP_DEPLOYMENT_GUIDE.md  MULTI_CONFIG_SUCCESS.md  QUICK_REFERENCE.md  REAL_DATA_IMPLEMENTATION_PLAN.md  REAL_SYSTEM_SUCCESS.md  TSFM_MODELS_DEEP_ANALYSIS.md
tsfm/eval/: ntp_correction_v2_design.md
tsfm/examples/: advanced_usage.py  chronotick_api_demo.py
tsfm/results/ntp_correction_experiment/: 5min_test_log.txt  8HOUR_TEST_INDEX.txt  ADVANCE_ABSOLUTE_TESTING_STATUS.txt  ADVANCE_ABSOLUTE_V3_EXPLANATION.txt  ADVANCE_ABSOLUTE_V3_STATUS.txt  CHANGES_SUMMARY.txt  COMPLETE_TEST_SUMMARY.txt  COVARIATES_INVESTIGATION_FINDINGS.txt  ENHANCED_FEATURES_SUMMARY.txt  FINAL_8HR_COMPARISON.txt  FINAL_COMPARISON_ALL_5_METHODS.txt  FINAL_RESULTS_ALL_METHODS.txt  FIXED_IMPLEMENTATIONS_SUMMARY.txt  IMPROVEMENT_PLAN_EXECUTIVE_SUMMARY.txt  IMPROVEMENT_PROPOSALS_ANALYSIS.txt  PHASE_1_VS_PHASE_2_COMPARISON.txt  PHASE_4_DUAL_MODEL_FINDINGS.txt  PHASE_4_OVERNIGHT_FINDINGS.txt  PHASE_4_SUMMARY.txt  SESSION_SUMMARY.md  experiment_summary_25min_comparison.txt  ntp_correction_v1_with_bug.csv
tsfm/results/timesfm_2.5_validation/: chronotick_chronos_baseline.csv  chronotick_client_validation.csv  chronotick_model_comparison.csv
tsfm/scripts/: analyze_client_validation.py  analyze_correction_comparison.py  analyze_cumulative_accuracy.py  analyze_ntp_correction.py  analyze_ntp_correction_log.py  api_check.py  compare_models.py  compare_ntp_correction.py  debug_correction_methods.py  debug_pipeline_hang.py  final_validation.py  long_term_stability_test.py  overnight_validation.py  plot_8hr_results.py  plot_correction_effects.py  quick_client_test.py  quick_integration_test.py  quick_ml_test.py  quick_test.py  reanalyze_25min_for_accuracy.py  run_all_correction_methods.sh  run_full_comparison.sh  run_ntp_correction_comparison.sh  run_phase2_tests.sh  test_25min_all_methods.py  test_25min_all_methods.sh  test_25min_per_method.py  test_3min_validation.py  test_config.py  test_with_correction_logging.py  test_with_visualization_data.py  validate_ntp_correction_synthetic.py  validate_ntp_correction_v2.py  verify_correction_sum.py
tsfm/tests/chronotick/: conftest.py  test_daemon_integration.py  test_debug_logging.py  test_engine.py  test_mcp_server.py  test_ntp_client.py  test_predictive_scheduler.py  test_real_data_pipeline.py
tsfm/tests/integration/: test_backward_compatibility.py  test_chronos_integration.py  test_enhanced_features_integration.py  test_performance.py  test_time_moe_integration.py  test_timesfm_integration.py  test_toto_integration.py  test_ttm_integration.py
tsfm/tests/unit/: test_base_enhanced.py  test_chronos.py  test_chronos_enhanced.py  test_covariates.py  test_factory_enhanced.py  (+9 more)
tsfm/tsfm/: base.py
(+297 files in other folders)
